public/screen.css
:root {
  font: 16px / 1 sans-serif;
}

html {
  height: 100%;
}

body {
  margin: 0;
  min-height: 100%;
}

ul {
  list-style: none;
}

.top-background {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  position: relative;
  justify-content: flex-start;
  background-color: #512da8;
  height: 4em;
}

.top-positioning {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
}

.page-title {
  display: flex;
  position: relative;
  right: 1em;
  color: white;
  font-size: 1.3em;
}

.position-links {
  display: flex;
  flex-direction: row;
  font-size: 0.8em;
}

img {
  width: 20em;
}

.explore-image {
  background-position: 0% 50%;
  background-size: 22.5em;
  background-repeat: no-repeat;
  height: 15em;
}

.explore-universe-text {
  display: flex;
  justify-content: center;
  align-items: center;
  background-position: 50% 50%;
  margin: 0;
  height: 6em;
  color: white;
  /* z-index: 1; */
}

.copyright {
  display: flex;
  justify-content: center;
  font-size: 0.6em;
  font-weight: normal;
  line-height: 0;
}

.launches-background {
  display: flex;
  position: relative;
  background-color: #fdc104;
  height: 2em;
}

.card-background {
  background-color: rgb(237, 237, 237);
  margin-left: 1em;
  margin-right: 1em;
  border-radius: 2em;
  padding: 1em;
}

.launches-title {
  display: flex;
  justify-content: center;
  font-size: 1em;
}

.arrows {
  display: flex;
  justify-content: center;
  width: 0.2em;
  height: 7em;
  padding: 0.5em 1em 1em 0.5em;
  background-color: rgb(255, 193, 7);
  font-size: 2rem;
  border-radius: 0rem 1rem 1rem 0rem;
}

main {
  display: flex;
  justify-content: space-evenly;
}

.mission-style {
  display: flex;
  justify-content: center;
  font-size: 1em;
  font-weight: bold;
  margin-bottom: 1em;
}

.row-icons {
  display: flex;
  flex-direction: row;
}

.statement-background {
  background-color: #d1c4e9;
  padding: 3em;
}

.footer {
  background-color: hsl(262, 52%, 47%);
  text-align: center;
  padding: 2em;
  color: silver;
}

.footer-link {
  color: silver;
}

@media (min-width: 800px) {
  .top-background {
    height: 6.2em;
  }
  .page-title {
    padding: 0.5em;
    font-size: 3em;
  }
  .position-links {
    position: relative;
    left: 95em;
    font-size: 0.7em;
  }
  .explore-image {
    background-size: 100%;
    background-position: 30% 50%;
    height: 40em;
  }
  .explore-universe-text {
    position: relative;
    font-size: 4em;
    top: 2.5em;
  }
}

